# scada-gui

./: CMakeLists.txt  IndustrialScadaQt.pro  README.md  run_scada.sh
pages/: alarms.cpp  alarms.h  alumclariflocculator.cpp  alumclariflocculator.h  controlpanel.cpp  controlpanel.h  dashboard.cpp  dashboard.h  filtrationdashboard.cpp  filtrationdashboard.h  mimic.cpp  mimic.h  monitoring.cpp  monitoring.h  settings.cpp  settings.h  trends.cpp  trends.h
src/: datasimulator.cpp  datasimulator.h  main.cpp  mainwindow.cpp  mainwindow.h  usermanager.cpp  usermanager.h
widgets/: alumclariflocculatorview.cpp  alumclariflocculatorview.h  blowercontrolpanel.cpp  blowercontrolpanel.h  eventlogwidget.cpp  eventlogwidget.h  flowcomponents.cpp  flowcomponents.h  processflowview.cpp  processflowview.h  processmimicwidget.cpp  processmimicwidget.h  pumpcontrolfaceplate.cpp  pumpcontrolfaceplate.h  sensorcard.cpp  sensorcard.h  statusindicator.cpp  statusindicator.h  tankwidget.cpp  tankwidget.h  valveindicator.cpp  valveindicator.h
